--- a/Index.html
+++ b/Index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h1 {
+            color: green;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
+    <h1>Welcome to the backend page </h1>
     <script src="script.js"></script>
 </body>
 </html>
